Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.


VERSION 2.4.1
  FEATURES:

  CHANGES:
    * Do not store track rating as tags in files. Patch by Alan Ezusti
      <alan.ezust@gmail.com>. (BR 259117)
    * Added missing tooltip for animation settings. Patch by Bhargav Mangipudi
      <bhargav.1191@gmail.com>. (BR 248690)

  BUGFIXES:
    * Fixed Mute button. (BR 253098)
    * Fixed issue with Organize collection, which made amarok remove newly copied tracks.
      (BR 263301)
    * Fixed wrong "Configure amarok" action position in tray icon popup menu. (BR 263330)
    * Fixed minor inconsistency in the Collection view. Patch by 
      Bhargav Mangipudi <bhargav.1191@gmail.com>. (BR 260973)
    * Fixed potential crash with the Similar Artists applet. Thanks to 
      Tuomas Nurmi <tuomas@norsumanageri.org> for the patch. (BR 263145)
    * Fixed 'Scale Font' option in OSD options for OSD preview widget.
      (BR 254029)
    * Fixed issue with playlist tooltips that was shown independetly from
      "Show tooltip" option. (BR 263121)
    * Fixed issues with multifiles cuesheet, when all tracks get metadata of
      last track
      in cuesheet, and each file defined in sheet gets all tracks of this sheet.
      (BR 262668) (BR 209341)
    * Fixed crash when trying to download a full size cover and the server
      redirects the request. (BR 262902)
    * Fixed issue when breadcrumbs stayed not updated after service insert/remove.
      (BR 262780)
    * Fixed issue with TagDialog that make metadata fields stay editable if multiple
      streams opened. (BR 177400)
    * Fixed missing equals-sign ('=') in filter string of bookmarks. (BR 245759)


VERSION 2.4.0
  CHANGES:
    * New Splash Screen by Tomasz Dudzik <madsheytan@gmail.com>.
    * The "Playdar Collection" feature has been disabled until some technical 
      issues are resolved.
    * Fixed some broken radio stream URLs.

  BUGFIXES: